--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,9 +7,10 @@ ja:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
     attributes:
-      article:
-        title: 'タイトル'
-        content: '内容'
+      post:
+        picture: '画像'
+        text: 'テキスト'
+        
   date:
     abbr_day_names:
     - 日
