--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -17,6 +17,7 @@ ja:
         locked_at: ロック時刻
         password: パスワード
         password_confirmation: パスワード（確認用）
+        characters_minimum: "（%{count}字以上）"
         remember_created_at: ログイン記憶時刻
         remember_me: ログインを記憶する
         reset_password_sent_at: パスワードリセット送信時刻
@@ -123,7 +124,6 @@ ja:
         sign_in: ログイン
         sign_in_with_provider: "%{provider}でログイン"
         sign_up: アカウント登録
-      minimum_password_length: "（%{count}字以上）"
     unlocks:
       new:
         resend_unlock_instructions: アカウントの凍結解除方法を再送する
