--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
     attributes:
       post:
         picture: '画像'
-        text: 'テキスト'
+        content: 'テキスト'
         
   date:
     abbr_day_names:
